[gd_scene load_steps=7 format=2]

[ext_resource path="res://Interface/Interactive/FileDialogRestricted.gd" type="Script" id=1]
[ext_resource path="res://res/paper02_col.jpg" type="Texture" id=2]
[ext_resource path="res://Interface/TextDisplay/LabelAdaptive.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Interactive/ScrollContainerDraggable.tscn" type="PackedScene" id=4]
[ext_resource path="res://Interface/Input/TextEditFreeForm.tscn" type="PackedScene" id=5]
[ext_resource path="res://Interface/Buttons/MenuButton.tscn" type="PackedScene" id=6]

[node name="FileDialogRestricted" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 559.072, 752.461 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LableAdaptive" parent="VBoxContainer" instance=ExtResource( 3 )]
margin_right = 720.0
mode = "title"

[node name="ScrollContainer" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_top = 4.0
margin_right = 720.0
margin_bottom = 736.0

[node name="VBoxContainerFiles" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]

[node name="CheckBox" type="CheckBox" parent="VBoxContainer"]
margin_top = 740.0
margin_right = 720.0
margin_bottom = 806.0

[node name="TextEditFreeform" parent="VBoxContainer" instance=ExtResource( 5 )]
margin_top = 810.0
margin_right = 720.0
margin_bottom = 870.0
rect_min_size = Vector2( 600, 60 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 874.0
margin_right = 720.0
margin_bottom = 950.0
alignment = 1

[node name="ButtonSelect" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 258.0
margin_right = 358.0

[node name="ButtonCancel" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 6 )]
margin_left = 362.0
margin_right = 462.0
text_loc = "cancel"
[connection signal="toggled" from="VBoxContainer/CheckBox" to="." method="_on_CheckBox_toggled"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonSelect" to="." method="_on_ButtonSelect_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
